# RpBot

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  en_keys.txt  setup.sh
src/: bson_modifiers.rs  main.rs  translation.rs  universe.rs
src/add_server_to_universe_command/: handler.rs  logic.rs
src/characters/: create_character_sub_command.rs  mod.rs
src/create_place/: handler.rs
src/create_road_command/: handler.rs
src/create_universe_command/: handler.rs  logic.rs  mod.rs  universe.rs
src/database/: characters.rs  db_client.rs  db_namespace.rs  items.rs  mod.rs  modifiers.rs  places.rs  players.rs  road.rs  server.rs  stats.rs  travel.rs  universe.rs
src/discord/: channels.rs  connect_bot.rs  handler.rs  mod.rs  poise_structs.rs  roles.rs
src/discord/lib_tuning/: guildid.rs  http.rs  mod.rs  partial_guild.rs
src/item/: create_item_subcommand.rs  mod.rs
src/ping_command/: handler.rs  mod.rs  ping_data.rs
src/place/: create_place_sub_command.rs  mod.rs
src/roads/: create_road_sub_command.rs  mod.rs
src/setup_command/: complementary_setup.rs  full_setup.rs  handler.rs  mod.rs  partial_setup.rs
src/start_command/: handler.rs
src/tip/: mod.rs  support_command.rs
src/travel/: logic.rs  mod.rs  travel__sub_command.rs
src/universe/: add_server_sub_command.rs  create_universe_sub_command.rs  mod.rs  time.rs  time_sub_command.rs
src/universe/setup/: complementary_setup.rs  full_setup.rs  mod.rs  partial_setup.rs  setup_sub_command.rs
src/utility/: mod.rs  reply.rs
translations/: en-US.ftl  fr.ftl
