[package]
name = "RpBot_reborn"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = "0.12.4"
poise = "0.6.1"
fluent = "0.17.0"
intl-memoizer = "0.5.3"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
mongodb = "3.2.3"
urlencoding = "2.1.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_with = "3.12.0"
lazy_static = "1.5.0"
futures = "0.3.31"
regex = "1.11.2"
fluent-syntax = "0.12"