[package]
name = "RpBot_reborn"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = "0.12.5"
poise = "0.6.1"
fluent = "0.17.0"
intl-memoizer = "0.5.3"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
mongodb = "3.5.0"
urlencoding = "2.1.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_with = "3.16.1"
lazy_static = "1.5.0"
futures = "0.3.31"
regex = "1.12.2"
fluent-syntax = "0.12.0"
serde_json = "1.0.148"
log = "0.4.27"
rhai = "1.24.0"